# axiom

./: .gitignore  LLAMA_INTEGRATION_README.md  LOG_READER.md  README.md  SDK_README.md  gradle.properties  models.json  ooiabfmi4s  pubring.gpg  secring.gpg  settings.gradle.kts
.windsurf/workflows/: design-system.md
app/: build.gradle.kts
app/src/androidTest/java/com/toonandtools/axiom/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  llama_jni.cpp
axiom-android-sdk/: build.gradle.kts  consumer-rules.pro  proguard-rules.pro
axiom-core/: build.gradle.kts  proguard-rules.pro
axiom-llama-cpp/: build.gradle.kts  proguard-rules.pro
axiom-llama-cpp/src/main/cpp/: llama_jni.cpp
axiom-models/: build.gradle.kts  proguard-rules.pro
axiom-ui/: build.gradle.kts
docs/: MAVEN_PUBLISHING_CHECKLIST.md  PRODUCTION_GGUF_CHAT_SETUP.md  chat-keyboard-layout-rca.md  design-system.md  token-queue-system.md
docs/dryrun/feature/: chat-title-generation.md  context-builder-integration.md  edit-message.md  memory-repository.md  second-person-enforcement.md  session-management.md  thinking-tag-stripping.md  ui-safety-stopping-conditions.md
docs/fix/: user-appearing-in-message-box.md
docs/rca/: ime-gc-suppression-crash-fix.md  jni-utf-8-crash-fix.md  kv-cache-hang-on-second-generation-fix.md  modelhub-screen-state-update-fix.md
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
sample/: build.gradle.kts
sample/src/main/: AndroidManifest.xml
sample/src/main/res/values/: strings.xml
(+74 files in other folders)
